--- a/19tea_web/css/src/main/19tea_main_1024/19tea_main_1024.css
+++ b/19tea_web/css/src/main/19tea_main_1024/19tea_main_1024.css
@@ -1,136 +1,5 @@
 /* 1024px.css */
 @media screen and (min-width:481px) and (max-width:1024px){
-  #headBox{position: relative; z-index: 1000; width: 100%; height: 200px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
-  h1 {float: left; width: 200px; height: 80px; margin-left: 40px;}
-  h1 a{
-    display: block; width: 100%; height: 100%;
-    background-image: url("../../../../img/logo/logo_big.png");
-    background-repeat: no-repeat; background-position: 50% 50%;
-    background-size: contain;
-   }
-  #gnbBox{float: right; width: 570px; height: 50px; margin: 20px 96px 0 0;}
-  .gnb_close{display: none;}
-  .gnb_area{width: 100%; height: 100%;}
-  .gnb_main_menu{float: left; width: 540px; height: 100%;}
-  .gnb_main_menu>li{
-    float: left; width: 120px; height: 100%; 
-    text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px;
-  }
-  .gnb_main_menu>li:last-of-type{margin-right: 0;}
-  .gnb_main_menu>li.action a{color: #02396d;}
-  .gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; margin-top: 2px; border: 2px solid #989898;
-    box-sizing: border-box; background-color: #fff;  }
-  .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px;}
-  .gnb_sub_menu>li>a{
-    width: 80%; height: 100%; font-size: 16px; text-align: center; margin-top: 10px; margin-left: 20%;
-  }
- /*//headBox-------------------------------------------------  */
-
-  #viewBox{position: relative; width: 100%; height: 400px; background-color: #fef;}
-  .view_area{width: 100%; height: 100%; overflow: hidden;}
-  .view_indi_area{    position: absolute; right: 10%; bottom: 20px; z-index: 1000; 
-    width: 160px; height: 40px; text-align: center; border-radius: 20px;background-color: rgba(85,85,85,0.7);}
-  .view_indicator{ width: 80%; height: 100%;margin: auto; }
-  .view_indicator li{ float: left;
-    width: 20px; height: 20px; border-radius: 100%;
-    margin-left: 20px; margin-top: 10px; background-color: #fff;
-  }
-  .view_indicator li.action{background-color: #0063b4;}
-  .view_indicator li:first-child{margin-left: 12px;}
-  .view_indicator li >a {width: 100%; height: 100%;}
-  .view_area .view_con{width: 300%; height: 100%;}
-  .view_con li{float: left; width: 33.333334%; height: 100%;}
-  .view_con li > a{    
-    display: block; width: 100%; height: 100%; 
-    background-position: 50% 50%; background-repeat: no-repeat;
-  }
-  .view_img_01 > a{background-image: url("../../../../img/main/view/1024_view_add_01.png");}
-  .view_img_02 > a{background-image: url("../../../../img/main/view/1024_view_add_02.png");}
-  .view_img_03 > a{background-image: url("../../../../img/main/view/1024_view_add_03.png");}
-  
-
-/* //viewBox----------------------------------------- */
-  #advantagesBox{width: 100%; height: 600px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
-    #advantagesBox h2{
-      width: 236px; height: 60px; color: #02396d; 
-      font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-    }
-    .advantages_area{ width: 66.2109375vw; height: 374px; margin: auto;} 
-    .advantages_con{width: 58.59375vw; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
-      background-color: #fff; box-sizing: border-box; padding:0.5rem;}
-    .advantages_con ul{position: relative; width: 100%; height: 100%;}
-    .advantages_con ul li{
-      position: absolute; z-index: 50;
-      width: 100%; height: 100%; background-size: cover;
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-
-    .advantages_con ul li span{
-      display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; 
-      line-height:1.2; padding:1rem 0;
-       /* background-color: rgba(103, 103, 103, 0.7); */
-       background-color: rgba(51, 51, 51, 0.8);
-    }
-    .advantages_con li.action {z-index: 100;}
-    .next_btn{
-      /* position: absolute; top: 50%; right: 100px; z-index: 100; */
-      float: right; width: 7.617813vw; height: 100%;
-    }
-    .next_btn button{width: 38px; height: 56px; margin-left: 30px; margin-top: 168px;
-      background-image: url("../../../../img/main/content/incator_icon.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-
-    .advantages_img_01{
-      position: absolute; z-index: 50;
-      /* width: 58.59375vw; height:374px;   */
-      /* width: 100%; height: 100%;  */
-      background-image: url("../../../../img/main/content/1024_content_img_01.png");
-      /* background-repeat: no-repeat; background-position: 50% 50%; */
-    }
-    /* .advantages_img_01 span{
-      display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-      background-color: rgba(103, 103, 103, 0.7);
-    } */
-    .advantages_img_02{
-      /* position: absolute; z-index: 40; */
-      /* width: 58.59375vw; height:374px;   */
-      /* width: 100%; height: 100%;  */
-      background-image: url("../../../../img/main/content/1024_content_img_02.png");
-      /* background-repeat: no-repeat; background-position: 50% 50%; */
-    }
-    /* .advantages_img_02 span{
-      display: block; width: 100%; height: 100px; margin-top: 275px;
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-      background-color: rgba(103, 103, 103, 0.7);
-    } */
-    /* //#advantagesBox---------------------------------------- */
-  #promptionBox{ width: 100%; height: 600px; background-color: #fff;}
-  #promptionBox h2{
-    width: 236px; height: 60px; color: #02396d; 
-    font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-  } 
-    .video_area{width: 100%; height: 100%;}
-    .video_con {
-      position: relative;
-      width: 58.59375vw; height: 400px; margin: auto; border: 1px solid #313131; box-sizing: border-box;
-      margin-top: 30px; background-image: url("../../../../img/main/video/10024_video_img.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_text{display: none;}
-    .video_btn{
-      position: absolute; top: 50%; left: 50%; transform: translateX(-50%);
-      width: 42px; height: 42px;
-    }
-    .video_btn button{
-      width: 100%; height: 100%;
-      background-image: url("../../../../img/main/video/play_btn.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_btn button:hover{background-image: url("../../../../img/main/video/play_btn_hover.png");}
-/* //promptionBox----------------------------------------------- */  
   #reviewBox{position: relative; padding-top: 40px; max-width: 1024px; box-sizing: border-box; width: 100%; height: 300px; background-color: #fff;}
   .instagram_icon{
     position: absolute; top: 0; right: 140px;
@@ -156,6 +25,7 @@
 
     #footBox address{float: left; width: 22.4609375vw; height: 108px; font-size: 12px;}
     .ect_area{float: right; width: 15.8203125vw; height: 120px;}
+    .ect_area p {display: inline-block; margin-bottom: 20px;}
     .ect_area a{
       width: 6.8359375vw; height: 40px; float: left; 
       background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
