--- a/19tea_web/css/src/main/19tea_main_1440/19tea_main_1440.css
+++ b/19tea_web/css/src/main/19tea_main_1440/19tea_main_1440.css
@@ -1,146 +1,5 @@
 /* 1440px.css */
 @media screen and (min-width:1025px) and (max-width:1440px){
-  #headBox{position: relative; z-index: 1000; padding: 50px; box-sizing: border-box; width: 100%; height: 200px; background-color: #fff;}
-  h1 {float: left; width: 200px; height: 80px;}
-    h1 a{
-      display: block; width: 100%; height: 100%;
-      background-image: url("../../../../img/logo/logo_big.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-      background-size: contain;
-    }
-    #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px;}
-    .gnb_close{display: none;}
-    .gnb_area{width: 100%; height: 100%;}
-    .gnb_main_menu{float: left; width: 540px; height: 100%;}
-    .gnb_main_menu>li{
-      float: left; width: 120px; height: 100%; 
-      text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px;
-    }
-    .gnb_main_menu>li:last-of-type{margin-right: 0;}
-    .gnb_main_menu>li.action a{color: #02396d;}
-    .gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; margin-top: 2px; border: 2px solid #989898;
-      box-sizing: border-box; background-color: #fff;  }
-    .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px;}
-    .gnb_sub_menu>li>a{
-      width: 80%; height: 100%; font-size: 16px; text-align: center; margin-top: 10px; margin-left: 20%;
-    }  
- /*//headBox-------------------------------------------------  */
-  #viewBox{position: relative; width: 100%; height: 500px; background-color: #fef;}
-  .view_area{width: 100%; height: 100%; overflow: hidden;}
-  .view_indi_area{position: absolute; right: 10%; bottom: 20px; z-index: 1000;
-    width: 160px; height: 40px; text-align: center; border-radius: 20px;background-color: rgba(85,85,85,0.7);}
-  .view_indicator{ width: 80%; height: 100%;margin: auto; }
-  .view_indicator li{ float: left;
-    width: 20px; height: 20px; border-radius: 100%;
-    margin-left: 20px; margin-top: 10px; background-color: #fff;
-  }
-  .view_indicator li.action{background-color: #0063b4;}
-  .view_indicator li:first-child{margin-left: 12px;}
-  .view_indicator li >a {width: 100%; height: 100%;}
-  .view_area .view_con{width: 300%; height: 100%;}
-  .view_con li{float: left; width: 33.333334%; height: 100%;}
-  .view_con li > a{    
-    display: block; width: 100%; height: 100%; 
-    background-position: 50% 50%; background-repeat: no-repeat;
-  }
-  .view_img_01 > a{background-image: url("../../../../img/main/view/1440_view_add_01.png");}
-  .view_img_02 > a{background-image: url("../../../../img/main/view/1440_view_add_02.png");}
-  .view_img_03 > a{background-image: url("../../../../img/main/view/1440_view_add_03.png");}
-  
-
-/* //viewBox----------------------------------------- */
-  #advantagesBox{width: 100%; max-width: 1440px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
-  #advantagesBox h2{
-    width: 236px; height: 60px; color: #02396d; 
-    font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-  } 
-  .advantages_area{ width: 68.8888888889vw; height: 500px; margin: auto; margin-top: 50px;} 
-  .advantages_con{width: 62.5vw; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
-    box-sizing: border-box; padding:0.5rem;}
-  .advantages_con ul{position: relative; width: 100%; height: 100%;}
-  .advantages_con ul li{
-    position: absolute; z-index: 50;
-    width: 100%; height: 100%; background-size: cover;
-    background-repeat: no-repeat; background-position: 50% 50%;
-  }
-  .advantages_con ul li span{
-    display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-    color: #fff; font-size: 20px; font-weight: bold; text-align: center; 
-    line-height:1.2; padding:1rem 0;
-     /* background-color: rgba(103, 103, 103, 0.7); */
-     background-color: rgba(51, 51, 51, 0.8);
-  }
-  .advantages_con li.action {z-index: 100;}
-  .next_btn{
-    /* position: absolute; top: 50%; right: 100px; z-index: 100; */
-    float: right; width: 6.38888888889vw; height: 100%;
-  }
-  .next_btn button{width: 38px; height: 56px; margin-left: 2.08333333333vw; margin-top: 188px;
-    background-image: url("../../../../img/main/content/incator_icon.png");
-    background-repeat: no-repeat; background-position: 50% 50%;
-  }
-
-  .advantages_img_01{
-    position: absolute; z-index: 50;
-    /* width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-    background-image: url("../../../../img/main/content/big_content_img_01.png");
-    /* background-repeat: no-repeat; background-position: 50% 50%; */
-  }
-  /* .advantages_img_01 span{
-    display: block; width: 100%; height: 100px; margin-top: 400px;
-    color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-    background-color: rgba(103, 103, 103, 0.7);
-  } */
-  .advantages_img_02{
-    /* position: absolute; z-index: 40;
-    width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-    background-image: url("../../../../img/main/content/big_content_img_02.png");
-    /* background-repeat: no-repeat; background-position: 50% 50%; */
-  }
-  /* .advantages_img_02 span{
-    display: block; width: 100%; height: 100px; margin-top: 400px;
-    color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-    background-color: rgba(103, 103, 103, 0.7);
-  } */
-
-  /* //advantagesBox------------------------------------------------ */
-  #promptionBox{width: 100%; max-width: 1440px; height: 700px; padding-top: 40px; box-sizing: border-box; background-color: #fff;}
-  #promptionBox h2{
-    width: 236px; height: 60px; color: #02396d; 
-    font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-  } 
-    .video_area{width: 100%; height: 100%;}
-    .video_con {position: relative; 
-      float: left; margin-left: 172px;
-      width: 48.6111111111vw; height: 400px; border: 1px solid #313131; box-sizing: border-box;
-      margin-top: 80px; background-image: url("../../../../img/main/video/big_video_img.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_text{
-      float: left; margin-left: 2.08333333333vw; padding: 10px; box-sizing: border-box; margin-top: 80px; 
-      width: 25.1388888889vw; height: 400px; box-shadow: 2px 2px 3px 3px #989898;;
-    }
-      .video_text ul{width: 100%; height: 100%;}
-      .video_text ul li{
-        width: 100%; height: 180px; text-align: center;
-        background-repeat: no-repeat; background-position: 50% 50%;
-       }
-      .video_text ul li:nth-child(1){margin-bottom: 10px;}
-      .video_text ul li:nth-child(2){background-image: url("../../../../img/main/video/big_text_img.png");}
-
-      .video_text ul li p:nth-child(1){font-size: 24px; font-weight: bold; margin-bottom: 20px;}
-
-    .video_btn{
-      position: absolute; top:50%; left: 50%; transform: translate(-50% -50%);
-      width: 42px; height: 42px;
-    }
-    .video_btn button{
-      width: 100%; height: 100%;
-      background-image: url("../../../../img/main/video/play_btn.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_btn button:hover,
-    .video_btn button:focus{background-image: url("../../../../img/main/video/play_btn_hover.png");}
 /* //promptionBox----------------------------------------------- */ 
   #reviewBox{position: relative; padding-top: 40px; box-sizing: border-box; width: 100%; height: 300px; background-color: #fff;}
   .instagram_icon{
@@ -167,6 +26,7 @@
 
     #footBox address{float: left; width: 15.9722222vw; height: 108px;}
     .ect_area{float: right; width: 11.25vw; height: 120px;}
+    .ect_area p {display: inline-block; margin-bottom: 20px;}
     .ect_area a{
       width: 4.86111111111vw; height: 40px; float: left; 
       background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
