--- a/19tea_web/css/src/main/19tea_main.css
+++ b/19tea_web/css/src/main/19tea_main.css
@@ -4,7 +4,7 @@
 @import url("../main/main_view/viewBox.css");
 @import url("../main/main_advantage/advantageBox.css");
 @import url("../main/main_promotion/promotionBox.css");
-@import url("../main/main_review/");
+@import url("../main/main_review/review.css");
 @import url("../footer/footer.css");
 
 
