--- a/19tea_web/css/src/main/main_advantage/advantageBox.css
+++ b/19tea_web/css/src/main/main_advantage/advantageBox.css
@@ -1,153 +1,12 @@
 /* advantageBox.css */
 
-/* mobile */
-@media screen and (min-width:280) and (max-width:480px){
-#advantagesBox{width: 100%; max-width: 480px; height: 800px; padding: 50px 20px; box-sizing: border-box; background-color: #fff;}
-    #advantagesBox h2{
-      width: 236px; height: 60px; color: #02396d; 
-      font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-    } 
-    #advantagesBox ul{width: 100%; height: 100%;}
-    .next_btn{display: none;}
-    .advantages_img_01{
-      width:83.333333vw; height: 270px;  margin: auto; margin-top: 30px; margin-bottom: 86px;
-      background-image: url("../../../../img/main/content/480_content_img_01.png");
-      background-repeat: no-repeat; background-position: 50% 50%; box-shadow: 2px 2px 5px 5px #989898;
-    }
-    .advantages_img_01 span{
-      display: block; position: relative; top: 210px; width: 100%; height: 60px; 
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 60px;
-      background-color: rgba(103, 103, 103, 0.7);
-    }
-    .advantages_img_02{
-      width:83.333333vw; height: 270px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
-      background-image: url("../../../../img/main/content/480_content_img_02.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .advantages_img_02 span{
-      display: block; position: relative; top: 210px; width: 100%; height: 60px;
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 60px;
-      background-color: rgba(103, 103, 103, 0.7);
-    }
-  }
-  
-  /*tablet  */
-  @media screen and (min-width:481px) and (max-width:1024px){
-    #advantagesBox{width: 100%; height: 600px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
-       #advantagesBox h2{
-         width: 236px; height: 60px; color: #02396d; 
-         font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-       }
-       .advantages_area{ width: 66.2109375vw; height: 374px; margin: auto;} 
-       .advantages_con{width: 58.59375vw; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
-         background-color: #fff; box-sizing: border-box; padding:0.5rem;}
-       .advantages_con ul{position: relative; width: 100%; height: 100%;}
-       .advantages_con ul li{
-         position: absolute; z-index: 50;
-         width: 100%; height: 100%; background-size: cover;
-         background-repeat: no-repeat; background-position: 50% 50%;
-       }
-   
-       .advantages_con ul li span{
-         display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-         color: #fff; font-size: 20px; font-weight: bold; text-align: center; 
-         line-height:1.2; padding:1rem 0;
-          /* background-color: rgba(103, 103, 103, 0.7); */
-          background-color: rgba(51, 51, 51, 0.8);
-       }
-       .advantages_con li.action {z-index: 100;}
-       .next_btn{
-         /* position: absolute; top: 50%; right: 100px; z-index: 100; */
-         float: right; width: 7.617813vw; height: 100%;
-       }
-       .next_btn button{width: 38px; height: 56px; margin-left: 30px; margin-top: 168px;
-         background-image: url("../../../../img/main/content/incator_icon.png");
-         background-repeat: no-repeat; background-position: 50% 50%;
-       }
-   
-       .advantages_img_01{
-         position: absolute; z-index: 50;
-         /* width: 58.59375vw; height:374px;   */
-         /* width: 100%; height: 100%;  */
-         background-image: url("../../../../img/main/content/1024_content_img_01.png");
-         /* background-repeat: no-repeat; background-position: 50% 50%; */
-       }
-       /* .advantages_img_01 span{
-         display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-         color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-         background-color: rgba(103, 103, 103, 0.7);
-       } */
-       .advantages_img_02{
-         /* position: absolute; z-index: 40; */
-         /* width: 58.59375vw; height:374px;   */
-         /* width: 100%; height: 100%;  */
-         background-image: url("../../../../img/main/content/1024_content_img_02.png");
-         /* background-repeat: no-repeat; background-position: 50% 50%; */
-       }
-       /* .advantages_img_02 span{
-         display: block; width: 100%; height: 100px; margin-top: 275px;
-         color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-         background-color: rgba(103, 103, 103, 0.7);
-       } */
-      }
-/*pc pull  */
-@media screen and (min-width:1025px) and (max-width:1440px){
-  #advantagesBox{width: 100%; max-width: 1440px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
-    #advantagesBox h2{
-      width: 236px; height: 60px; color: #02396d; 
-      font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-    } 
-    .advantages_area{ width: 68.8888888889vw; height: 500px; margin: auto; margin-top: 50px;} 
-    .advantages_con{width: 62.5vw; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
-      box-sizing: border-box; padding:0.5rem;}
-    .advantages_con ul{position: relative; width: 100%; height: 100%;}
-    .advantages_con ul li{
-      position: absolute; z-index: 50;
-      width: 100%; height: 100%; background-size: cover;
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .advantages_con ul li span{
-      display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; 
-      line-height:1.2; padding:1rem 0;
-       /* background-color: rgba(103, 103, 103, 0.7); */
-       background-color: rgba(51, 51, 51, 0.8);
-    }
-    .advantages_con li.action {z-index: 100;}
-    .next_btn{
-      /* position: absolute; top: 50%; right: 100px; z-index: 100; */
-      float: right; width: 6.38888888889vw; height: 100%;
-    }
-    .next_btn button{width: 38px; height: 56px; margin-left: 2.08333333333vw; margin-top: 188px;
-      background-image: url("../../../../img/main/content/incator_icon.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-  
-    .advantages_img_01{
-      position: absolute; z-index: 50;
-      /* width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-      background-image: url("../../../../img/main/content/big_content_img_01.png");
-      /* background-repeat: no-repeat; background-position: 50% 50%; */
-    }
-    /* .advantages_img_01 span{
-      display: block; width: 100%; height: 100px; margin-top: 400px;
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-      background-color: rgba(103, 103, 103, 0.7);
-    } */
-    .advantages_img_02{
-      /* position: absolute; z-index: 40;
-      width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-      background-image: url("../../../../img/main/content/big_content_img_02.png");
-      /* background-repeat: no-repeat; background-position: 50% 50%; */
-    }
-    /* .advantages_img_02 span{
-      display: block; width: 100%; height: 100px; margin-top: 400px;
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
-      background-color: rgba(103, 103, 103, 0.7);
-    } */
-  }
+@import url("../main_advantage/advantageBox_480/advantageBox_480.css");
+@import url("../main_advantage/advantageBox_1024/advantageBox_1024.css");
+@import url("../main_advantage/advantageBox_1440/advantageBox_1440.css");
+
+
  
-  /* pc  */
+  /* pc 공통 */
   @media screen and (min-width:1441px){
     #advantagesBox{width: 100%; max-width: 1920px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
     #advantagesBox h2{
