--- a/19tea_web/css/src/19tea_brand.css
+++ b/19tea_web/css/src/19tea_brand.css
@@ -1,34 +1,13 @@
 /* 19tea_brand.css */
 
+@import url("../src/header/headBox.css");
+@import url("../src/footer/footer.css");
+
+
 /* 공통 */
-.head_area{width: 100%; height: 200px; background-color: #fff;}
-#wrap{width: 100%; max-width: 1920px; height: auto; min-height: 2000px; background-color: #ccc;}
-#headBox{position: relative; z-index: 1000; width: 100%; max-width: 1440px; height: 200px; 
-  padding: 50px; box-sizing: border-box; margin: auto; background-color: #fff;}
-h1 {float: left; width: 200px; height: 80px;}
-h1 a{
-  display: block; width: 100%; height: 100%;
-  background-image: url("../../../../img/logo/logo_big.png");
-  background-repeat: no-repeat; background-position: 50% 50%;
-  background-size: contain;
+#wrap{
+  width: 100%; max-width: 1920px; height: auto; min-height: 1000px; margin: auto;
 }
-#gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px; margin-right: 100px;}
-.gnb_close{display: none;}
-.gnb_area{width: 100%; height: 100%;}
-.gnb_main_menu{float: left; width: 540px; height: 100%;}
-.gnb_main_menu>li{
-  float: left; width: 120px; height: 100%; 
-  text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px;
-}
-.gnb_main_menu>li:last-of-type{margin-right: 0;}
-.gnb_main_menu>li.action a{color: #02396d;}
-.gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; margin-top: 2px; border: 2px solid #989898;
-  box-sizing: border-box; background-color: #fff;  }
-.gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px;}
-.gnb_sub_menu>li>a{
-  width: 80%; height: 100%; font-size: 16px; text-align: center; margin-top: 10px; margin-left: 20%;
-}   
-/* h2공통 */
 h2{
   width: 236px; height: 100px; color: #fff; line-height: 100px;
   font-size: 30px; font-weight: bold; margin: auto; text-align: center;
@@ -81,19 +60,29 @@ h2{
   background-image: url("../../img/brand/advantage/advatage_bg_img.png"); 
   background-position: 50% 50%; background-repeat: no-repeat; background-size: cover;
 }
+  .advantage_text_01{width: 100%; height: 120px; padding: 10px; box-sizing: border-box; background-color: #fbdae0;}
+    .advantage_text_01 p{text-align: center; font-size: 20px;}
+    .advantage_text_01 span{font-size: 24px; color:#0f3a6e; font-weight: bold;}
+  .advantage_con_area{position: relative; width: 742px; height: 536px; margin: auto; margin-top: 80px; background-color: #ccc;}
+    .plus_btn{width: 20px; height: 20px;}
+    .plus_btn button{
+      width: 100%; height: 100%;
+      background-image: url("../../img/brand/advantage/plus_icon.png");
+      background-repeat: no-repeat; background-position: 50% 50%;
+    }
+    .plus_btn:nth-child(1){position: absolute; top:62px; left: 220px;}
+    .plus_btn:nth-child(2){position: absolute; top: 226px; right: 252px;}
+    .plus_btn:nth-child(3){position: absolute; top: 382px; left: 220px;}
+    .advantage_cup_img{position: absolute; top: 0; left: 50%; transform: translate(-50%);
+      width: 294px; height: 464px; 
+      background-image: url("../../img/brand/advantage/big_cup_img.png");
+      background-repeat: no-repeat; background-position: 50% 50%;
+    }
+    .advantage_img_01{}
+    .advantage_img_02{}
+    .advantage_img_03{}
+  .advantage_text_02{}
 
-/* footBox--------------------------------- */
-#footBox{position: relative; width: 100%; height: 200px; padding: 40px 120px; box-sizing: border-box; color:#989898; background-color: #313131;}
-  #footBox address{float: left; width: 11.979166vw; height: 108px;}
-  .ect_area{float: right; width: 8.4375vw; height: 120px;}
-  .ect_area p {display: inline-block; margin-bottom: 20px;}
-  .ect_area a{
-    width: 3.64583333333vw; height: 40px; float: left; 
-    background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
-  }
-  .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
-  .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
-  .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 11.979166vw; height: 20px; }
 
 /*media start  */
 @media screen and (min-width:280px) and (max-width:480px){}
