--- a/19tea_web/css/src/footer/footer.css
+++ b/19tea_web/css/src/footer/footer.css
@@ -1,53 +1,13 @@
 /* footer.css */
 
-/* mobile */
-@media screen and (min-width:280px) and (max-width:480px){
-  #footBox{position: relative; width: 100%; height: 200px; padding: 40px 10px; box-sizing: border-box; color:#989898; background-color: #313131;}
-  #footBox address{float: left; width: 47.916666vw; height: 108px; font-size: 12px;}
-  .ect_area{float: right; width: 33.75vw; height: 120px;}
-  .ect_area p {display: inline-block; margin-bottom: 20px;}
-  .ect_area a{
-    width: 14.5833333333vw; height: 40px; float: left; 
-    background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
-  }
-  .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
-  .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
-  .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 47.916666vw; height: 20px;}
-}
- 
-/* tablet */
-@media screen and (min-width:481px) and (max-width:1024px){
-  #footBox{position: relative; width: 100%; height: 200px; padding: 40px 50px; box-sizing: border-box; color:#989898; background-color: #313131;}
+@import url("../footer/footBox_480/footBox_480.css");
+@import url("../footer/footBox_1024/footBox_1024.css");
+@import url("../footer/footBox_1440/footBox_1440.css");
 
-  #footBox address{float: left; width: 22.4609375vw; height: 108px; font-size: 12px;}
-  .ect_area{float: right; width: 15.8203125vw; height: 120px;}
-  .ect_area p {display: inline-block; margin-bottom: 20px;}
-  .ect_area a{
-    width: 6.8359375vw; height: 40px; float: left; 
-    background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
-  }
-  .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
-  .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
-  .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 22.4609375vw; height: 20px;}
-}
 
-/* pc pull */
-@media screen and (min-width:1023px) and (max-width: 1440){
-  #footBox{position: relative; width: 100%; height: 200px;padding: 40px 80px; box-sizing: border-box; color:#989898; background-color: #313131;}
 
-    #footBox address{float: left; width: 15.9722222vw; height: 108px;}
-    .ect_area{float: right; width: 11.25vw; height: 120px;}
-    .ect_area p {display: inline-block; margin-bottom: 20px;}
-    .ect_area a{
-      width: 4.86111111111vw; height: 40px; float: left; 
-      background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
-    }
-    .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
-    .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
-    .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 15.9722222vw; height: 20px;}
-  }
 
-/* pc */
+/* pc  공통*/
 @media screen and (min-width:1441px){
   #footBox{position: relative; width: 100%; height: 200px;padding: 40px 120px; box-sizing: border-box; color:#989898; background-color: #313131;}
       #footBox address{float: left; width: 11.979166vw; height: 108px;}
