--- a/19tea_web/css/src/header/headBox_1440/headBox_1440.css
+++ b/19tea_web/css/src/header/headBox_1440/headBox_1440.css
@@ -1,22 +1,17 @@
-/* headBox.css */
-
-@import url("../header/headBox_480/headBox_480.css");
-@import url("../header/headBox_1024/headBox_1024.css");
-@import url("../header/headBox_1440/headBox_1440.css");
+/* headBox_1440.css */
 
 
-  /* pc  공통*/
-  @media screen and (min-width:1441px){
-    .head_area{width: 100%; height: 200px; background-color: #fff;}
-    #headBox{position: relative; z-index: 1000; width: 100%; max-width: 1440px; height: 200px; padding: 50px; box-sizing: border-box; margin: auto; background-color: #fff;}
-      h1 {float: left; width: 200px; height: 80px;}
+  /* pc pull */
+  @media screen and (min-width:1025px) and (max-width:1440px){
+    #headBox{position: relative; z-index: 1000; padding: 50px; box-sizing: border-box; width: 100%; height: 200px; background-color: #fff;}
+    h1 {float: left; width: 200px; height: 80px;}
       h1 a{
         display: block; width: 100%; height: 100%;
         background-image: url("../../../../img/logo/logo_big.png");
         background-repeat: no-repeat; background-position: 50% 50%;
         background-size: contain;
       }
-      #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px; margin-right: 100px;}
+      #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px;}
       .gnb_close{display: none;}
       .gnb_area{width: 100%; height: 100%;}
       .gnb_main_menu{float: left; width: 540px; height: 100%;}
