--- a/19tea_web/css/src/main/main_promotion/promotionBox.css
+++ b/19tea_web/css/src/main/main_promotion/promotionBox.css
@@ -1,100 +1,10 @@
 /* promotionBox.css */
 
-/* mobile */
-@media screen and (min-width:280) and (max-width:480px){
-#promotionBox{ width: 100%; height: 400px; padding-top: 40px; background-color: #fff;}
-#promotionBox h2{
-width: 236px; height: 60px; color: #02396d; 
-font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-} 
-.video_area{width: 100%; height: 100%;}
-.video_con { position: relative;
-  width: 79.166666vw; height: 200px; margin: auto; border: 1px solid #313131; box-sizing: border-box;
-  margin-top: 30px; background-image: url("../../../../img/main/video/480_video_img.png");
-  background-repeat: no-repeat; background-position: 50% 50%;
-}
-.video_text{display: none;}
-.video_btn{
-  position: absolute; top: 50%; left: 50%; transform: translateX(-50%);
-  width: 42px; height: 42px;
-}
-.video_btn button{
-  width: 100%; height: 100%;
-  background-image: url("../../../../img/main/video/play_btn.png");
-  background-repeat: no-repeat; background-position: 50% 50%;
-}
-.video_btn button:hover,
-.video_btn button:focus{background-image: url("../../../../img/main/video/play_btn_hover.png");}
-}
+@import url("../main_promotion/promotionBox_480/promotionBox_480.css");
+@import url("../main_promotion/promotionBox_1024/promotionBox_1024.css");
+@import url("../main_promotion/promotionBox_1440/promotionBox_1440.css");
 
-/* tablet */
-@media screen and (min-width:481px) and (max-width:1024px){
-  #promotionBox{ width: 100%; height: 600px; background-color: #fff;}
-    #promotionBox h2{
-      width: 236px; height: 60px; color: #02396d; 
-      font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-    } 
-      .video_area{width: 100%; height: 100%;}
-      .video_con {
-        position: relative;
-        width: 58.59375vw; height: 400px; margin: auto; border: 1px solid #313131; box-sizing: border-box;
-        margin-top: 30px; background-image: url("../../../../img/main/video/10024_video_img.png");
-        background-repeat: no-repeat; background-position: 50% 50%;
-      }
-      .video_text{display: none;}
-      .video_btn{
-        position: absolute; top: 50%; left: 50%; transform: translateX(-50%);
-        width: 42px; height: 42px;
-      }
-      .video_btn button{
-        width: 100%; height: 100%;
-        background-image: url("../../../../img/main/video/play_btn.png");
-        background-repeat: no-repeat; background-position: 50% 50%;
-      }
-      .video_btn button:hover{background-image: url("../../../../img/main/video/play_btn_hover.png");}
-}
 
-/* pc pull */
-@media screen and (min-width:1025px) and (max-width:1440px){
-  #promotionBox{width: 100%; max-width: 1440px; height: 700px; padding-top: 40px; box-sizing: border-box; background-color: #fff;}
-  #promotionBox h2{
-    width: 236px; height: 60px; color: #02396d; 
-    font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-  } 
-    .video_area{width: 100%; height: 100%;}
-    .video_con {position: relative; 
-      float: left; margin-left: 172px;
-      width: 48.6111111111vw; height: 400px; border: 1px solid #313131; box-sizing: border-box;
-      margin-top: 80px; background-image: url("../../../../img/main/video/big_video_img.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_text{
-      float: left; margin-left: 2.08333333333vw; padding: 10px; box-sizing: border-box; margin-top: 80px; 
-      width: 25.1388888889vw; height: 400px; box-shadow: 2px 2px 3px 3px #989898;;
-    }
-      .video_text ul{width: 100%; height: 100%;}
-      .video_text ul li{
-        width: 100%; height: 180px; text-align: center;
-        background-repeat: no-repeat; background-position: 50% 50%;
-       }
-      .video_text ul li:nth-child(1){margin-bottom: 10px;}
-      .video_text ul li:nth-child(2){background-image: url("../../../../img/main/video/big_text_img.png");}
-
-      .video_text ul li p:nth-child(1){font-size: 24px; font-weight: bold; margin-bottom: 20px;}
-
-    .video_btn{
-      position: absolute; top:50%; left: 50%; transform: translate(-50% -50%);
-      width: 42px; height: 42px;
-    }
-    .video_btn button{
-      width: 100%; height: 100%;
-      background-image: url("../../../../img/main/video/play_btn.png");
-      background-repeat: no-repeat; background-position: 50% 50%;
-    }
-    .video_btn button:hover,
-    .video_btn button:focus{background-image: url("../../../../img/main/video/play_btn_hover.png");}
-  }
- 
   /* pc */
   @media screen and (min-width:1441px){
     #promotionBox{position: relative; width: 100%; height: 700px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
@@ -104,7 +14,7 @@ font-size: 30px; font-weight: bold; margin: auto; text-align: center;
     } 
       .video_area{width: 100%; height: 100%;}
       .video_con {
-        float: left; margin-left: 320px;
+        float: left; margin-left: 420px;
         width: 36.4583333333vw; max-width: 700px; height: 400px; border: 1px solid #313131; box-sizing: border-box;
         margin-top: 80px; background-image: url("../../../../img/main/video/big_video_img.png");
         background-repeat: no-repeat; background-position: 50% 50%;
