--- a/19tea_web/css/src/main/main_view/viewBox_480/viewBox_480.css
+++ b/19tea_web/css/src/main/main_view/viewBox_480/viewBox_480.css
@@ -1,15 +1,10 @@
-/* viewBox */
+/* viewBox_480.css */
 
-@import url("../main_view/viewBox_480/viewBox_480.css");
-@import url("../main_view/viewBox_1024/viewBox_1024.css");
-@import url("../main_view/viewBox_1440/viewBox_1440.css");
-
-
-  /* pc 공통  */
-  @media screen and (min-width:1441px){
-    #viewBox{position: relative; width: 100%; height: 500px;}
+/*mobile  */
+@media screen and (min-width:280px) and (max-width:480px){
+  #viewBox{position: relative; width: 100%; height: 200px; background-color: #fef;}
       .view_area{width: 100%; height: 100%; overflow: hidden;}
-      .view_indi_area{    position: absolute; right: 10%; bottom: 20px; z-index: 1000;
+      .view_indi_area{ position: absolute; right: 10%; bottom: 20px; z-index: 1000; 
         width: 160px; height: 40px; text-align: center; border-radius: 20px;background-color: rgba(85,85,85,0.7);}
       .view_indicator{ width: 80%; height: 100%;margin: auto; }
       .view_indicator li{ float: left;
@@ -25,8 +20,7 @@
         display: block; width: 100%; height: 100%; 
         background-position: 50% 50%; background-repeat: no-repeat;
       }
-      .view_img_01 > a{background-image: url("../../../../img/main/view/1920_view_add_01.png");}
-      .view_img_02 > a{background-image: url("../../../../img/main/view/1920_view_add_02.png");}
-      .view_img_03 > a{background-image: url("../../../../img/main/view/1920_view_add_03.png");}
-    }    
-  
+      .view_img_01 > a{background-image: url("../../../../../img/main/view/480_view_add_01.png");}
+      .view_img_02 > a{background-image: url("../../../../../img/main/view/480_view_add_02.png");}
+      .view_img_03 > a{background-image: url("../../../../../img/main/view/480_view_add_03.png");}
+    }
