--- a/c_code/e_jquery/css/base/reset.css
+++ b/c_code/e_jquery/css/base/reset.css
@@ -14,7 +14,7 @@ button { background-color: transparent; cursor: pointer;}
 
 a:hover, a:focus,
 button:hover, button:focus {
-  position: relative; z-index: 500; 
+  position: relative; z-index: 500; outline: 3px solid #fa0;
 }
 
 hr{width: 100%; height: 0; margin: 0;
