--- a/19tea_web/css/src/main/19tea_main.css
+++ b/19tea_web/css/src/main/19tea_main.css
@@ -1,5 +1,7 @@
 /* 19tea_main.css */
 
+
+
 @import url("../header/headBox.css");
 @import url("../main/main_view/viewBox.css");
 @import url("../main/main_advantage/advantageBox.css");
@@ -11,5 +13,5 @@
 
 /* 공통내용*/
 #wrap{
-  width: 100%; max-width: 1920px; height: auto; min-height: 1000px; margin: auto;
+  width: 100%; max-width: 1920px; max-width: 120rem; height: auto; min-height: 1000px; min-height: 62.5rem; margin: auto;
 }
