--- a/19tea_web/css/src/footer/footer.css
+++ b/19tea_web/css/src/footer/footer.css
@@ -9,15 +9,15 @@
 
 /* pc  공통*/
 @media screen and (min-width:1441px){
-  #footBox{position: relative; width: 100%; height: 200px;padding: 40px 120px; box-sizing: border-box; color:#989898; background-color: #313131;}
-      #footBox address{float: left; width: 11.979166vw; height: 108px;}
-      .ect_area{float: right; width: 8.4375vw; height: 120px;}
-      .ect_area p {display: inline-block; margin-bottom: 20px;}
+  #footBox{position: relative; width: 100%; height: 200px;  height: 12.5rem; padding: 40px 120px; padding: 2.5rem 7.5rem; box-sizing: border-box; color:#989898; background-color: #313131;}
+      #footBox address{float: left; width: 11.979166vw; height: 108px; height: 6.75rem; }
+      .ect_area{float: right; width: 8.4375vw; height: 120px; height: 7.5rem;}
+      .ect_area p {display: inline-block; margin-bottom: 20px; margin-bottom: 1.25rem;}
       .ect_area a{
-        width: 3.64583333333vw; height: 40px; float: left; 
+        width: 3.64583333333vw; height: 40px; height: 2.5rem; float: left; 
         background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
       }
-      .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
+      .ect_area a:nth-child(2){margin-right: 10px; margin-right: 0.625rem; background-image: url("../../../../img/foot/login.png");}
       .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
-      .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 11.979166vw; height: 20px; }
+      .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 11.979166vw; height: 20px; height: 1.25rem; }
     }
