--- a/19tea_web/css/src/header/headBox_1024/headBox_1024.css
+++ b/19tea_web/css/src/header/headBox_1024/headBox_1024.css
@@ -2,28 +2,29 @@
 
 /* 481부터 1024(tablet) */
 @media screen and (min-width:481px) and (max-width:1024px){
-  #headBox{position: relative; z-index: 1000; width: 100%; height: 200px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
-  h1 {float: left; width: 200px; height: 80px; margin-left: 40px;}
+  #headBox{position: relative; z-index: 1000; width: 100%; height: 200px; padding-top: 50px; height: 12.5rem; padding-top: 3.125rem; box-sizing: border-box; background-color: #fff;}
+  h1 {float: left; width: 200px; height: 80px; margin-left: 40px; width: 12.5rem; height: 5rem; margin-left: 2.5rem;}
   h1 a{
     display: block; width: 100%; height: 100%;
     background-image: url("../../../../img/logo/logo_big.png");
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
    }
-  #gnbBox{float: right; width: 570px; height: 50px; margin: 20px 96px 0 0;}
+  #gnbBox{float: right; width: 570px; height: 50px; margin: 20px 96px 0 0; width: 35.625rem; height: 3.125rem; margin: 1.25rem 6rem 0 0; }
   .gnb_close{display: none;}
   .gnb_area{width: 100%; height: 100%;}
-  .gnb_main_menu{float: left; width: 540px; height: 100%;}
+  .gnb_main_menu{float: left; width: 540px;  width: 33.75rem; height: 100%;}
   .gnb_main_menu>li{
-    float: left; width: 120px; height: 100%; 
-    text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px;
+    float: left; width: 120px; width: 7.5rem; height: 100%; 
+    text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px; font-size: 1.25rem; margin-right: 1.25rem;
   }
   .gnb_main_menu>li:last-of-type{margin-right: 0;}
   .gnb_main_menu>li.action a{color: #02396d;}
-  .gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; margin-top: 2px; border: 2px solid #989898;
+  .gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; min-height: 6.25rem; margin-top: 2px; margin-top: 0.125rem; 
+    border: 2px solid #989898;   border: 0.125rem solid #989898;
     box-sizing: border-box; background-color: #fff;  }
-  .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px;}
+  .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px; width: 6.25rem; height: 1.25rem; margin-bottom: 0.625rem;}
   .gnb_sub_menu>li>a{
-    width: 80%; height: 100%; font-size: 16px; text-align: center; margin-top: 10px; margin-left: 20%;
+    width: 80%; height: 100%; font-size: 16px; font-size: 1rem; text-align: center; margin-top: 10px; margin-top: 0.625rem; margin-left: 20%;
   }
 }
