--- a/19tea_web/css/src/header/headBox_1440/headBox_1440.css
+++ b/19tea_web/css/src/header/headBox_1440/headBox_1440.css
@@ -3,28 +3,29 @@
 
   /* pc pull */
   @media screen and (min-width:1025px) and (max-width:1440px){
-    #headBox{position: relative; z-index: 1000; padding: 50px; box-sizing: border-box; width: 100%; height: 200px; background-color: #fff;}
-    h1 {float: left; width: 200px; height: 80px;}
+    #headBox{position: relative; z-index: 1000; padding: 50px; padding: 3.125rem; box-sizing: border-box; width: 100%; height: 200px; height: 12.5rem; background-color: #fff;}
+    h1 {float: left; width: 200px; height: 80px; width: 12.5rem; height: 5rem;}
       h1 a{
         display: block; width: 100%; height: 100%;
         background-image: url("../../../../img/logo/logo_big.png");
         background-repeat: no-repeat; background-position: 50% 50%;
         background-size: contain;
       }
-      #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px;}
+      #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px; width: 35.625rem; height: 3.125rem; margin-top: 3.125rem;}
       .gnb_close{display: none;}
       .gnb_area{width: 100%; height: 100%;}
-      .gnb_main_menu{float: left; width: 540px; height: 100%;}
+      .gnb_main_menu{float: left; width: 540px; width: 33.75rem; height: 100%;}
       .gnb_main_menu>li{
-        float: left; width: 120px; height: 100%; 
-        text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px;
+        float: left; width: 120px; width: 7.5rem; height: 100%; 
+        text-align: center; font-weight: bold; font-size: 20px; margin-right: 20px; font-size: 1.25rem; margin-right: 1.25rem;
       }
       .gnb_main_menu>li:last-of-type{margin-right: 0;}
       .gnb_main_menu>li.action a{color: #02396d;}
       .gnb_sub_menu{display: none; width: 100%; height: auto; min-height: 100px; margin-top: 2px; border: 2px solid #989898;
+        min-height: 6.25rem; margin-top: 0.125rem; border: 0.125rem solid #989898;
         box-sizing: border-box; background-color: #fff;  }
-      .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px;}
+      .gnb_sub_menu>li{width: 100px; height: 20px; margin-bottom: 10px; width: 6.25rem; height: 1.25rem; margin-bottom: 0.625rem;}
       .gnb_sub_menu>li>a{
-        width: 80%; height: 100%; font-size: 16px; text-align: center; margin-top: 10px; margin-left: 20%;
+        width: 80%; height: 100%; font-size: 16px; font-size: 1rem; text-align: center; margin-top: 10px; margin-top: 0.625rem; margin-left: 20%;
       }  
   }
