--- a/19tea_web/css/src/main/main_advantage/advantageBox.css
+++ b/19tea_web/css/src/main/main_advantage/advantageBox.css
@@ -8,14 +8,21 @@
  
   /* pc 공통 */
   @media screen and (min-width:1441px){
-    #advantagesBox{width: 100%; max-width: 1920px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
+    #advantagesBox{width: 100%; max-width: 1920px; height: 800px; padding-top:50px ; max-width: 120rem; height: 50rem; 
+      padding-top:3.125rem ; box-sizing: border-box; background-color: #fff;}
     #advantagesBox h2{
-      width: 236px; height: 60px; color: #02396d; 
-      font-size: 30px; font-weight: bold; margin: auto; text-align: center;
+      width: 236px; height: 60px;  width: 14.75rem; height: 3.75rem; color: #02396d; 
+      font-size: 30px; font-size: 1.875rem; font-weight: bold; margin: auto; text-align: center;
     } 
-    .advantages_area{position: relative; width: 51.6666666667vw; max-width: 996px; height: 500px; margin: auto; margin-top: 50px;} 
-    .advantages_con{width: 46.875vw; max-width: 900px; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
-      box-sizing: border-box; padding:0.5rem;}
+    .advantages_area{
+      position: relative; width: 51.6666666667vw; max-width: 996px; height: 500px; max-width: 62.25rem; height: 31.25rem; 
+      margin: auto; margin-top: 50px; margin-top: 3.125rem;
+    } 
+    .advantages_con{
+      width: 46.875vw; max-width: 900px;  max-width: 56.25rem;  height: 100%; 
+      box-shadow: 2px 2px 5px 5px #989898; box-shadow: 0.125rem 0.125rem 0.3125rem 0.3125rem #989898;
+      box-sizing: border-box; padding:0.5rem;
+    }
     .advantages_con ul{position: relative; width: 100%; height: 100%;}
     .advantages_con ul li{
       position: absolute; z-index: 50;
@@ -24,7 +31,7 @@
     }
     .advantages_con ul li span{
       display: block; position: absolute; left: 0; bottom: 0; width: 100%; height:auto; 
-      color: #fff; font-size: 20px; font-weight: bold; text-align: center; 
+      color: #fff; font-size: 20px; font-size: 1.25rem; font-weight: bold; text-align: center; 
       line-height:1.2; padding:1rem 0;
        /* background-color: rgba(103, 103, 103, 0.7); */
        background-color: rgba(51, 51, 51, 0.8);
@@ -33,9 +40,11 @@
     
     .next_btn{
       /* position: absolute; top: 50%; right: 100px; z-index: 100; */
-      float: right; width: 4.79166666667vw; max-width: 96px; height: 100%;
+      float: right; width: 4.79166666667vw; max-width: 96px; max-width: 6rem; height: 100%;
     }
-    .next_btn button{width: 38px; height: 56px; margin-left: 2.08333333333vw; margin-top: 188px;
+    .next_btn button{
+      width: 38px; height: 56px; width: 2.375rem; height: 3.5rem; 
+      margin-left: 2.08333333333vw; margin-top: 188px; margin-top: 11.75rem;
       background-image: url("../../../../img/main/content/incator_icon.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
