--- a/19tea_web/css/src/main/main_review/review_1440/review_1440.css
+++ b/19tea_web/css/src/main/main_review/review_1440/review_1440.css
@@ -4,10 +4,10 @@
 /* pc pull */
 @media screen and (min-width:1025px) and (max-width:1440px){
   /* //promptionBox----------------------------------------------- */ 
-    #reviewBox{position: relative; padding-top: 40px; box-sizing: border-box; width: 100%; height: 300px; background-color: #fff;}
+    #reviewBox{position: relative; padding-top: 40px; padding-top: 2.5rem;  box-sizing: border-box; width: 100%; height: 300px;  height: 18.75rem; background-color: #fff;}
     .instagram_icon{
-      position: absolute; top: 0; right: 180px;
-      width: 40px; height: 40px;
+      position: absolute; top: 0; right: 180px; right: 11.25rem;
+      width: 40px; height: 40px; width: 2.5rem; height: 2.5rem;
     }
     .instagram_icon a{      
       width: 100%; height: 100%;
@@ -17,7 +17,7 @@
     .review_area{width: 100%; height: 100%;}
     .review_area ul{width: 100%; height: auto; text-align: center;}
     .review_area ul li{
-      display: inline-block;  width: 200px; height: 200px; margin-left: 100px; margin-top: 30px;
+      display: inline-block;  width: 200px; height: 200px; margin-left: 100px; margin-top: 30px;  width: 12.5rem; height: 12.5rem; margin-left: 6.25rem; margin-top: 1.875rem;
       background-repeat: no-repeat; background-position: 50% 50%;
     }
     .review_area ul li:nth-child(1){margin-left: 0; background-image: url("../../../../../img/main/review/big_instagram_img_01.png");}
